--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: wedding-recommender
+    name: wedding-recommendation
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host=0.0.0.0 --port=10000
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn app.main:app --host=0.0.0.0 --port=10000"
     envVars:
-      - key: PYTHON_VERSION
-        value: "3.11"
+      - key: PORT
+        value: 10000
