--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
-# render.yaml (혹시 없으면 새로 만들어줘)
 services:
   - type: web
     name: project-py
     env: python
-    buildCommand: ""
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
     plan: free
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
     autoDeploy: true
