--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,11 @@
 services:
   - type: web
-    name: project-py
-    env: python
-    plan: free
-    buildCommand: "pip install -r requirements.txt"
+    name: fastapi-app
+    runtime: python
+    buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11
+    plan: free
     autoDeploy: true
